# test

./: .all-contributorsrc  .cspell.json  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .vale.ini  500_FUNCTION_PLAN.md  500_MILESTONE_FINAL_STATUS.md  ALL_FIXES_COMPLETE_FINAL.md  ANALIZA_PROJEKTU_2026-02-10.md  ANALIZA_ZAKONCZONA.md  ANALYSIS_QUICK_REFERENCE.md  API_REFERENCE.md  APPLICATIONS_GUIDE.md  BENCHMARKING_SESSION_SUMMARY.md  BENCHMARK_SUMMARY.md  BUILD_OPTIONS_SUMMARY.md  BUILD_REPORT.md  C  CHANGELOG.md  CHANGELOG_V1.1.0.md  CHANGELOG_v0.6.0_old.md  CHANGELOG_v1.6.0.md  CITATION.cff  CLEANUP_PROJECT_INDEX.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMPREHENSIVE.md  COMPREHENSIVE_DOCUMENTATION.md  COMPREHENSIVE_IMPLEMENTATION_ANALYSIS_FEB_24_2025.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  COMPREHENSIVE_SESSION_SUMMARY_JAN10.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  CONTRIBUTING_ascii.md  Cargo.toml  DAY_5_PATH_CACHING.md  DESKTOP_GUIDE.md  (+177 more)
.devcontainer/: setup.sh  (+1 more)
VantisOS/bootloader/: Cargo.toml  README.md  build.sh
VantisOS/bootloader/src/: boot_info.rs  file_system.rs
iso_build/kernel/: Cargo.toml  linker.ld  x86_64-unknown-none.json
iso_build/kernel/src/: boot.asm  lib.rs
src/verified/: Cargo.toml  allocator.rs  android_subsystem.rs  automotive_iso26262.rs  babel_protocol.rs  bci_interface.rs  benches_v1_6_0.rs  braille_display.rs  cinema_enclave.rs  cinema_fairplay.rs  cinema_hdcp.rs  cinema_playready.rs  cinema_widevine.rs  compliance_iso27001.rs  compliance_medical.rs  compliance_pci_dss.rs  compliance_soc2.rs  cortex_ai.rs  direct_metal.rs  direct_metal_backend.rs  direct_metal_metal.rs  direct_metal_vulkan.rs  flux_compositor.rs  flux_engine.rs  flux_gaming.rs  flux_hdr.rs  flux_wayland.rs  flux_window.rs  grand_premiere.rs  horizon_creator.rs  horizon_enterprise.rs  horizon_gamer.rs  horizon_profiles.rs  horizon_wraith.rs  industrial_iec61508.rs  interfaces.rs  iommu.rs  iommu_amd.rs  iommu_intel.rs  iommu_tests.rs  (+84 more)
src/verified/ai_enhanced/: anomaly_detection.rs  federated_learning.rs  inference_engine.rs  mod.rs  model_optimizer.rs  resource_predictor.rs
src/verified/backup/: mod.rs
src/verified/benches/: filesystem_benchmark.rs  scheduler_benchmark.rs
src/verified/certification/: eal.rs  fips1403.rs  hipaa.rs  iso27001.rs  mod.rs  pci_dss.rs  soc2.rs
src/verified/cloud/: autoscaling.rs  deployment.rs  loadbalancer.rs  mod.rs  service_mesh.rs
src/verified/container/: mod.rs
src/verified/developer_tools/: build_system.rs  debugger.rs  mod.rs  profiler.rs
src/verified/distributed/: disaster.rs  ha.rs  mod.rs  storage.rs
src/verified/edge/: framework.rs  mod.rs  offline.rs  processing.rs  sync.rs
src/verified/enterprise/: mod.rs
src/verified/filesystem/: mod.rs  vantisfs.rs  vantisfs_advanced.rs  vantisfs_features.rs  vantisfs_utils.rs  vfs.rs
src/verified/fs/: fat32.rs  mod.rs  recovery.rs
src/verified/ha/: mod.rs
src/verified/hdr/: metadata.rs  mod.rs  tonemap.rs
src/verified/installer/: automated.rs  gui.rs  mod.rs  network.rs  partition.rs  recovery.rs  tui.rs
src/verified/integration/: mod.rs
src/verified/kubernetes/: auth.rs  client.rs  config.rs  configmap.rs  deployment.rs  ingress.rs  mod.rs  namespace.rs  pod.rs  replicaset.rs  secret.rs  service.rs
src/verified/legacy/: api.rs  migration.rs  mod.rs  windows.rs
src/verified/management/: mod.rs
src/verified/minimal_kernel/: block_device.rs  char_device.rs  entry.rs  init.rs  interrupt.rs  memory_protection.rs  mod.rs  process_manager.rs  process_scheduler.rs  serial.rs  simple_entry.rs  sync.rs  thread_manager.rs  thread_scheduler.rs  timer.rs
src/verified/mobile/: android.rs  battery.rs  ios.rs  security.rs  ui.rs
src/verified/multi_monitor/: display.rs  layout.rs  mod.rs  mode.rs  primary.rs
src/verified/multicloud/: abstract.rs  aws.rs  azure.rs  gcp.rs  mod.rs
src/verified/network/: arp.rs  coap.rs  ethernet.rs  icmp.rs  ip_enhanced.rs  ipv6.rs  mod.rs  ndi.rs  socket_enhanced.rs  tcp.rs  tcp_enhanced.rs  udp_enhanced.rs  vpn.rs
src/verified/networking/: mod.rs
src/verified/networking_enhanced/: mod.rs  sdn_controller.rs  traffic_shaper.rs  zero_trust_network.rs
src/verified/numa/: affinity.rs  allocation.rs  mod.rs  node.rs
src/verified/performance/: bottleneck.rs  cache.rs  io.rs  mod.rs  network.rs  profiling.rs
src/verified/power/: frequency.rs  management.rs  mod.rs  modes.rs
src/verified/power_management/: battery.rs  cpu.rs  gpu.rs  mod.rs  scheduler.rs  screen.rs
src/verified/production/: mod.rs  operations.rs  sla.rs  support.rs  troubleshooting.rs
src/verified/quantum/: circuit.rs  gates.rs  mod.rs  simulator.rs  state.rs
src/verified/riscv/: README.md  boot.rs  interrupt.rs  linker.ld  mmu.rs  mod.rs  riscv64-vantisos.json  sbi.rs
src/verified/scheduler/: affinity.rs  load_balancer.rs  mod.rs  policy.rs  priority.rs  queue.rs
src/verified/security/: mod.rs
src/verified/security_enhanced/: mod.rs  runtime_integrity.rs  secure_enclave.rs
src/verified/smp/: barrier.rs  boot.rs  ipi.rs  spinlock.rs
src/verified/stability/: crash.rs  deadlock.rs  health.rs  memory.rs  mod.rs  race.rs  stress.rs
src/verified/syscall/: advanced.rs  filesystem.rs  mod.rs  network.rs  process.rs
src/verified/tests/: direct_metal_backend_tests.rs  sentinel_tests.rs  vantis_aegis_tests.rs  vault_tests.rs
src/verified/userspace/: apps.rs  libc.rs  libm.rs  mod.rs  testing.rs
src/verified/v0.5.0_kernel/: filesystem.rs  integration.rs  interrupt.rs  linker.ld  main.rs  memory.rs  performance.rs  process.rs  security.rs  simple_vga_test.rs  thread.rs  vga_console.rs
src/verified/v0.6.0_kernel/: build_arm64.sh
src/verified/vault/: code_based.rs  post_quantum.rs
store/: Cargo.toml  lib.rs  manifest.schema.json  verify.rs
userspace/accessibility/voice_assistant/: Cargo.toml
userspace/ai/cortex_ai/: Cargo.toml
userspace/compatibility/vnt_apps/: Cargo.toml
userspace/drivers/direct_metal/: Cargo.toml
userspace/multimedia/audio_mixer/: Cargo.toml
userspace/multimedia/flux_engine/: Cargo.toml
(+1869 files in other folders)
