[workspace]
resolver = "2"
members = [
    "userspace/drivers/iommu",
    "userspace/drivers/direct_metal",
    "userspace/drivers/network",
    "userspace/security/vault",
    "userspace/security/sentinel",
    "userspace/security/compliance",
    "userspace/ai/cortex_ai",
    "userspace/ai/semantic_search",
    "userspace/ai/automation",
    "userspace/multimedia/audio_mixer",
    "userspace/multimedia/babel_protocol",
    "userspace/multimedia/flux_engine",
    "userspace/accessibility/spectrum_2_0",
    "userspace/accessibility/voice_assistant",
    "userspace/accessibility/bci_interface",
    "userspace/accessibility/braille_display",
    "userspace/accessibility/haptic_language",
    "userspace/compatibility/vnt_apps",
    "userspace/compatibility/android_subsystem",
    "userspace/compatibility/legacy_airlock",
    "userspace/profiles/profiles",
    "userspace/profiles/interfaces",
    "userspace/profiles/permission_cards",
    "userspace/ui/flux",
    "userspace/ui/shells",
]
exclude = [
    "iso_build/kernel",
    "src/verified",
]

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"

# Verification dependencies
builtin = { package = "verus_builtin", version = "0.0.0-2026-02-08-0120" }
builtin_macros = { package = "verus_builtin_macros", version = "0.0.0-2026-02-08-0120" }
vstd = { version = "0.0.0-2026-02-08-0120" }

# Cryptography
aes = { version = "0.8", default-features = false }
twofish = { version = "0.7", default-features = false }
serpent = { version = "0.5", default-features = false }
cbc = { version = "0.1", default-features = false }
cipher = { version = "0.5", default-features = false, features = ["block-padding"] }

# Random
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
getrandom = { version = "0.2", default-features = false, features = ["std"] }

# GPU
ash = { version = "0.37" }
metal-rs = { version = "0.27", package = "metal" }

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["VANTIS OS Team"]
license = "MIT"