[package]
name = "vantis-store"
version = "0.1.0"
edition = "2021"
authors = ["VANTIS OS Team"]
description = "Store and package verification primitives for VantisOS"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
