[workspace]

[package]
name = "vantis-kernel"
version = "1.5.0"
edition = "2021"
authors = ["VantisOS Team"]
description = "VantisOS Quantum-Ready Operating System Kernel"

[lib]
crate-type = ["staticlib"]
name = "vantis_kernel"

[dependencies]
spin = "0.9"
x86_64 = "0.14"
uart_16550 = "0.3"
pic8259 = "0.10"
pc-keyboard = "0.7"
linked_list_allocator = "0.10"
volatile = "0.4.6"
libm = "0.2"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

[features]
default = []
vga = []
serial = []
