[package]
name = "vantis-cortex-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["hw-accel"]
hw-accel = []
verus = ["dep:builtin", "dep:builtin_macros", "dep:vstd"]
verus-full = ["verus"]
kani = []
