[package]
name = "vantis-cortex-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

builtin = { package = "verus_builtin", version = "0.0.0-2026-02-08-0120", optional = true }
builtin_macros = { package = "verus_builtin_macros", version = "0.0.0-2026-02-08-0120", optional = true }
vstd = { version = "0.0.0-2026-03-08-0103", optional = true }

[features]
default = ["hw-accel"]
hw-accel = []
verus = ["dep:builtin", "dep:builtin_macros", "dep:vstd"]
verus-full = ["verus"]
kani = []
