[package]
name = "vantis-flux"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
ash = { workspace = true, optional = true }
metal-rs = { workspace = true, optional = true }

builtin = { package = "verus_builtin", version = "0.0.0-2026-02-08-0120", optional = true }
builtin_macros = { package = "verus_builtin_macros", version = "0.0.0-2026-02-08-0120", optional = true }
vstd = { version = "0.0.0-2026-02-08-0120", optional = true }

[features]
default = ["hw-accel"]
hw-accel = []
vulkan = ["ash"]
metal = ["metal-rs"]
all-backends = ["vulkan", "metal"]
verus = ["dep:builtin", "dep:builtin_macros", "dep:vstd"]
verus-full = ["verus"]
kani = []
